# lektor-redirect

./: .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/lektor_redirect/: __init__.py  exceptions.py  plugin.py  sources.py  util.py
tests/: conftest.py  test_exceptions.py  test_functional.py  test_plugin.py  test_sources.py  test_util.py
tests/test-site/: Test Site.lektorproject
tests/test-site/configs/: redirect.ini
tests/test-site/content/about/more-detail/: contents.lr
tests/test-site/content/images/: apple-pie.jpg.lr  contents.lr
tests/test-site/content/projects/: contents.lr
tests/test-site/models/: attachment.ini  page.ini
tests/test-site/templates/: layout.html  redirect.html
