[project]
name = "lektor-redirect"
dynamic = ["version"]
description = "A Lektor plugin to help with generating redirects for, e.g., moved pages."
keywords = ["lektor", "plugin"]
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jeff Dairiki", email = "dairiki@dairiki.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Lektor",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = []
requires-python = ">=3.8"

[project.entry-points."lektor.plugins"]
redirect = "lektor_redirect:RedirectPlugin"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "lektor>=3.3.11",
    "flake8>=5.0.4",
    "flake8-bugbear>=23.3.12",
    "tox>=4.18.0",
    "tox-pdm>=0.7.2",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[tool.pdm.scripts]
tests = "pytest tests"

[tool.pytest.ini_options]
addopts = "--cov=lektor_redirect --cov-report=term-missing --cov-report=html"
